fix: added z-index in navbar

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -22,7 +22,7 @@
 
 .nav-menu{
     background-color: #060b26;
-    width: 250px;
+    width: 300px;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -35,6 +35,7 @@
 .nav-menu.active{
     left: 0;
     transition: 350ms;
+    z-index: 1000;
 }
 
 .nav-text{
